--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "SqlLiteDb": "Data Source=webdev.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LogFile": {
+    "LogPath": "Logs/RequestLogs.txt"
+  }
 }
